crates/biome_cli/tests/snapshots/main_commands_version/version_full.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome version
```

# Emitted Messages

```block
CLI:        0.0.0
```

```block
Server:
  Name:     biome_lsp
  Version:  0.0.0
```
