crates/biome_cli/tests/snapshots/main_commands_version/version_ok.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome --version
```

# Emitted Messages

```block
Version: 0.0.0

```
